[metadata]
name = aws-utls-rdegraafwhizzkit
version = 0.0.1
author = Rutger de Graaf
author_email = code@whizzkit.nl
description = AWS Utils
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rdegraafwhizzkit/aws-utils
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8